emp-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-api
  labels:
    app: save-employee
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: save-employee
  template:
    metadata:
      labels:
        app: save-employee
        tier: compute
    spec:
      containers:
        - image: de.icr.io/demo-cpawar/employee-api
          imagePullPolicy: Always
          name: employee-api
          ports:
            - containerPort: 8080
