deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-api
  labels:
    app: save-employee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: save-employee
  template:
    metadata:
      labels:
        app: save-employee
        tier: compute
    spec:
      containers:
        - image: employee-api
          name: employee-api
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: employee-service
  labels:
    app: employee-service
spec:
  type: NodePort
  ports:
    # the port that this service should serve on
    - port: 80
      targetPort: 8080
  # label keys and values that must match in order to receive traffic for this service
  selector:
    app: save-employee
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service-cip
  labels:
    app: save-employee
spec:
  type: ClusterIP
  ports:
    # the port that this service should serve on
    - port: 80
      targetPort: 8080
  # label keys and values that must match in order to receive traffic for this service
  selector:
    app: save-employee
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
  - host: hello-app.cluster-ingress-subdomain
    http:
      paths:
      - backend:
          serviceName: hello-service-cip
          servicePort: 80
        path: /
  tls:
  - hosts:
    - hello-app.cluster-ingress-subdomain
    secretName: cluster-ingress-secret
